footer alignment fixed all viewports

--- a/src/css/variablesClassics.css
+++ b/src/css/variablesClassics.css
@@ -79,7 +79,7 @@ html {
   --footer-engagement-logo-margin: 0;
   --footer-engagement-logo-max-height-mobile: 40px;
   --footer-engagement-logo-max-height: 40px;
-  --footer-engagement-logo-padding: 30px 0 0;
+  --footer-engagement-logo-padding: 14px 0 0;
   --footer-engagement-logo-text-a-color-hover: var(--footer-engagement-logo-text-a-color);
   --footer-engagement-logo-text-a-color: #009fe3;
   --footer-engagement-logo-text-color: #009fe3;
@@ -102,24 +102,25 @@ html {
   --footer-justify-content: space-between;
   --footer-logo-align-items: flex-end;
   --footer-logo-container-flex-wrap-mobile: wrap;
-  --footer-logo-container-justify-content-wrapped-mobile: center;
+  --footer-logo-container-justify-content-wrapped-mobile: space-between;
   --footer-logo-container-justify-content-wrapped: flex-end;
   --footer-logo-height-mobile: max(50px, 15vw);
   --footer-logo-height: max(65px, 8vw);
   --footer-logo-margin-mobile: 8px 0 0;
-  --footer-logo-margin: 0;
+  --footer-logo-margin: 0 0 -1vw 0;
   --footer-logo-max-height: max(120px, 5vw);
   --footer-logo-padding: 0;
   --footer-min-height-mobile: 50px;
   --footer-min-height: 50px;
+  --footer-p-margin: -3px 0px;
   --footer-p-line-height: normal;
-  --footer-padding-mobile: 3vh 1vw;
-  --footer-padding: 2vh max(2.2vw, 15px) max(1.3vw, 10px);
+  --footer-padding-mobile: 3vh 2vw;
+  --footer-padding: calc(2.4vw - 15px) 10px 2.4vw 10px;
   --footer-text-align: center;
   --footer-text-decoration-hover: underline;
   --footer-ul-margin-mobile: 0 auto 15px auto;
-  --footer-ul-margin: 0 20px;
-  --footer-ul-padding: 27px 0 13px 0;
+  --footer-ul-margin: 0 10px;
+  --footer-ul-padding: 0;
   --form-flex-direction: row;
   --h1-font-size-mobile: var(--h1-font-size);
   --h1-font-size: min(2.223em, 9vw);
